# sybil

./: .gitignore  Cargo.toml  Makefile  README.md  canister_ids.json  dfx.json  package-lock.json  package.json  webpack.config.js
src/sybil/: Cargo.toml  sybil.did
src/sybil/src/: lib.rs
src/sybil/src/assets/: ERC20ABI.json
src/sybil/src/http/: handlers.rs  middlewares.rs  mod.rs  response.rs  router.rs
src/sybil/src/jobs/: cache_cleaner.rs  mod.rs
src/sybil/src/methods/: balances.rs  controllers.rs  custom_feeds.rs  custom_pairs.rs  data_fetchers.rs  default_feeds.rs  default_pairs.rs  mod.rs  pairs.rs  signatures.rs  state.rs  transforms.rs  whitelist.rs
src/sybil/src/migrations/: mod.rs
src/sybil/src/types/: auth_data.rs  balances.rs  cache.rs  config.rs  custom_pair.rs  data_fetchers.rs  exchange_rate.rs  feeds.rs  http.rs  mod.rs  pairs.rs  rate_data.rs  service.rs  source.rs  state.rs  whitelist.rs
src/sybil/src/utils/: address.rs  canister.rs  convertion.rs  encoding.rs  exchange_rate.rs  get_rate.rs  macros.rs  metrics.rs  mod.rs  nat.rs  parsed_number.rs  processors.rs  signature.rs  siwe.rs  time.rs  treasurer.rs  update_rate.rs  validation.rs  vec.rs  web3.rs
src/sybil/src/utils/web3/: evm_canister_transport.rs  mod.rs
tests/: .env.tests  Cargo.toml  package-lock.json  package.json
tests/contracts/: ERC20Mock.sol
tests/scripts/: deploy.js  transfer.js
tests/src/: balances.rs  default_feeds.rs  default_pairs.rs  lib.rs  whitelist.rs
