[package]
name = "sybil"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
hex = "0.4.3"
url = "2.3.1"
candid = "0.8"
ic-cdk = "0.7.4"
serde = "1.0.162"
anyhow = "1.0.71"
ic-web3 = "0.1.7"
serde_json = "1.0.96"
ic-cdk-timers = "0.1"
slotmap = { version = "1.0.6", features = ["serde"] }
ic-utils = { package = "canistergeek_ic_rust", version = "0.3.1" }
