[package]
name = "sybil"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
hex = "0.4.3"
candid = "0.8"
ic-cdk = "0.9.2"
serde = "1.0.166"
anyhow = "1.0.71"
serde_json = "1.0.100"
slotmap = { version = "1.0.6", features = ["serde"] }
ic-utils = { package = "canistergeek_ic_rust", version = "0.3.1" }
jsonptr = "0.3.5"
thiserror = "1.0.40"
serde_bytes = "0.11.9"
matchit = "0.7.0"
serde_qs = "0.12.0"
validator = { version = "0.16.1", features = ["derive"] }
regex = "1.8.4"
lazy_static = "1.4.0"
async-trait = "0.1.69"
siwe = { git = "https://github.com/domwoe/siwe-rs", version = "0.5.0" }
time-rs = { package = "time", version = "0.3.22" }
sha3 = "0.10.8"
ic-web3-rs = { git = "https://github.com/orally-network/ic-web3-rs", tag = "v0.1.0"}
derive_builder = "0.12.0"
num-bigint = "0.4.3"
derivative = "2.2.0"
futures = "0.3.28"
